# langchain-playground

./: .gitignore  README.md  pyproject.toml
autogen_tutorial/: litellm_config.yaml  testing.ipynb
infra/: docker-compose.yaml  litellm_config.yaml
langchain/: 02-ollama-langchain.ipynb  04-ollama-langchain.ipynb  05-ollama-function-calling.ipynb
langchain_tutorial/: 01-ollama-langchain.ipynb  03-ollama-langchain-LCEL.ipynb  06-ollama-tagging-and-extraction.ipynb
langgraph/: 01-Hello.ipynb  02-Multiple-inputs.ipynb  03-sequential.ipynb  05-looping-graph.ipynb  06-agent-bot-ollama.ipynb  07-agent-bot-ollama-with-short-term-memory.ipynb
langgraph/long-term-agentic-memory/: 01-agent-memory.ipynb  02-email-assistant.ipynb
langgraph_tutorial/: 04-conditioonal-graph.ipynb  08-agent-ReAct.ipynb  README.md
langgraph_tutorial/long-term-agentic-memory/: 02-email-assistant.ipynb  03-email-assistant-semantic-memory.ipynb  04-email-assistant-semantic-with-episodic-memory.ipynb  05-email-assistant-semantic-with-episodic-procedural-memory.ipynb
rag/: 01-llm-document-loading.ipynb  05-llm-question-answering.ipynb
rag/Building_And_Evaluating_Advanced_RAG/01/merging_index/: default__vector_store.json
rag/Building_And_Evaluating_Advanced_RAG/infra/: docker-compose.yaml  init.sh
rag_tutorial/: 02-llm-document-splitting.ipynb  03-llm-vectorstores_and_embeddings.ipynb  04-llm-retrieval.ipynb
rag_tutorial/Building_And_Evaluating_Advanced_RAG/01/: 01-rag-pipeline.ipynb  basic_rag.json  default.sqlite  eval_questions.txt  utils.py
(+4 files in other folders)
